[package]
name = "tf2"
version = "0.1.0"
edition = "2021"
description = "Team Fortress 2 GC messages for use with steam-vent."
authors = ["Julia"]
homepage = "https://github.com/juliarose/tf2"
repository = "https://github.com/juliarose/tf2"
license = "MIT"
keywords = ["tf2", "steam"]
readme = "README.md"

[dependencies]
tf2-protobuf = { version = "0.1.0", path = "./tf2-protobuf" }
steam-vent = { version = "0.1.0", path = "../steam-vent" }
protobuf = "=2.24.1"
thiserror = "1"
bytes = "1"
byteorder = "1"